testsuite/tests/semantic_errors/goto_missing_label/test.adb
procedure Test is
begin
   goto Missing;
   pragma Test_Statement (Expect_Fail => True);
end Test;
