testsuite/tests/semantic_errors/goto_missing_label/test.out
Analyzing test.adb
##################

Resolving xrefs for node <GotoStmt test.adb:3:4-3:17>
*****************************************************

Name resolution failed as expected with:

test.adb:3:9: error: no such entity
3 |    goto Missing;
  |         ^^^^^^^



Done.
